Build & Publish JAR

--- a/.github/workflows/cicd-workflow.yaml
+++ b/.github/workflows/cicd-workflow.yaml
@@ -20,3 +20,15 @@ jobs:
     - name: 'Check Java Version'
       run: |
         java --version
+    - name: 'Assemble JAR'
+      run: |
+        ./gradlew assemble
+    - name: 'Get Version Number'
+      run: |
+        echo "VERSION=$(./gradlew properties -q | grep "version:" |
+        awk '{print $2}')" >> $GITHUB_ENV
+    - name: 'Publish JAR'
+      uses: actions/upload-artifact@v3-preview
+      with:
+        name: 'cicd-demo-${{env.VERSION}}-all.jar'
+        path: build/libs/*-all.jar
